# weather-mcp

./: .env.example  .gitignore  DEPLOYMENT_FIXES.md  DEPLOYMENT_STATUS_REPORT.md  Dockerfile  README-deployment-monitor.md  README.md  TEST_CASES_SUMMARY.md  TRANSPORT_FIX.md  check_deployment.py  check_direct_deployment.py  debug_weather.py  deployment-monitor-requirements.txt  deployment_pipeline_monitor.py  fix_transport.sh  index.py  pyproject.toml  requirements.txt  server.py  smithery.yaml  test_coords.py  test_deployment_monitor.py  test_local_server.py  test_specific_weather.py  test_weather.py  weather_tools.py
.github/workflows/: ci.yml  deploy-python-mcp-smithery.yml  deployment-monitor-test.yml  health-check.yml
agentic-scripts/: README.md  config.json
src/: __init__.py  weather_server.py
tests/: test_server.py
weather_mcp/: __init__.py  server.py
